<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:src="@drawable/header_background"
            android:paddingBottom="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textColor="@color/linxWhite"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pict"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/profile"
            android:layout_below="@id/title"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textColor="@color/hintOfPensive"
            android:layout_below="@id/profile_pict"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_below="@id/nim"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/linxWhite"
            android:paddingBottom="6dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textAlignment="center"
            android:textColor="@color/linxWhite"
            android:textStyle="bold"
            android:layout_below="@id/name"
            android:paddingBottom="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:id="@+id/btn_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/role"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_phone"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_phone"
                android:textColor="@color/linxWhite"
                android:layout_marginTop="12dp"
                android:layout_marginStart="30dp"
                android:text="@string/phone_number"
                android:drawableTop="@drawable/icons8_phone_27"
                android:drawablePadding="6dp"
                android:padding="6dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:onClick="openApp"
                />

            <Button
                android:id="@+id/btn_email"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_email"
                android:textColor="@color/linxWhite"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:text="@string/email_address"
                android:drawableTop="@drawable/icons8_gmail_27"
                android:drawablePadding="6dp"
                android:padding="6dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:onClick="openApp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_maps"
            android:textColor="@color/linxWhite"
            android:text="@string/home_address"
            android:drawableTop="@drawable/icons8_google_maps_27"
            android:drawablePadding="6dp"
            android:padding="6dp"
            android:textAllCaps="false"
            android:layout_below="@id/btn_group"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:onClick="openApp"
            />

        <LinearLayout
            android:id="@+id/about_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/btn_maps"
            android:background="@color/linxWhite"
            android:layout_marginVertical="16dp"
            android:paddingVertical="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            >

            <TextView
                android:id="@+id/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="3dp"
                android:textAlignment="center"
                android:textColor="@color/titleText"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/about_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>